--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,32 @@
+/php/app/.env
+/php/app/.env.test
 # Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
-
-# Email spool folder
-/app/spool/*
+/php/app/cache/*
+/php/app/logs/*
+!php/app/cache/.gitkeep
+!php/app/logs/.gitkeep
 
 # Cache, session files and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-/var/sessions/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-!var/sessions/.gitkeep
+/php/app/var/cache/*
+/php/app/var/logs/*
+/php/app/var/sessions/*
+!php/app/var/cache/.gitkeep
+!php/app/var/logs/.gitkeep
+!php/app/var/sessions/.gitkeep
 
 # Logs (Symfony4)
-/var/log/*
-!var/log/.gitkeep
+/php/app/var/log/*
+!php/app/var/log/.gitkeep
 
 # Parameters
-/app/config/parameters.yml
-/app/config/parameters.ini
+/php/app/config/parameters.yml
+/php/app/config/parameters.ini
 
 # Managed by Composer
-/app/bootstrap.php.cache
-/var/bootstrap.php.cache
-/bin/*
-!bin/console
-!bin/symfony_requirements
-/vendor/
+/php/app/bootstrap.php.cache
+/php/app/var/bootstrap.php.cache
+/php/app/bin/*
+!php/app/bin/console
+!php/app/bin/symfony_requirements
+/php/app/vendor/
 
-# Assets and user uploads
-/web/bundles/
-/web/uploads/
-
-# PHPUnit
-/app/phpunit.xml
-/phpunit.xml
-
-# Build data
-/build/
-
-# Composer PHAR
-/composer.phar
-
-# Backup entities generated with doctrine:generate:entities command
-**/Entity/*~
-
-# Embedded web-server pid file
-/.web-server-pid
