--- a/php/app/composer.json
+++ b/php/app/composer.json
@@ -64,5 +64,8 @@
             "allow-contrib": false,
             "require": "7.4.*"
         }
+    },
+    "require-dev": {
+        "php-cs-fixer/shim": "^3.92"
     }
 }
