--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
-# Dockerfile for Symfony app with PHP 8.4
-# Builds an image with PHP 8.4, Composer and the Symfony CLI and runs the builtin Symfony server
-
-FROM php:8.4-cli
+# PHP 8.4 FPM for Symfony
+FROM php:8.4-fpm
 
 # Install system dependencies and PHP extensions
 RUN apt-get update \
@@ -10,9 +8,6 @@ RUN apt-get update \
         unzip \
         zip \
         curl \
-        wget \
-        gnupg \
-        ca-certificates \
         libzip-dev \
         libicu-dev \
         libonig-dev \
@@ -21,7 +16,7 @@ RUN apt-get update \
         libxml2-dev \
         zlib1g-dev \
         libpq-dev \
-    && docker-php-ext-install -j"$(nproc)" \
+    && docker-php-ext-install -j$(nproc) \
         intl \
         mbstring \
         pdo \
@@ -31,28 +26,5 @@ RUN apt-get update \
         opcache \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Symfony CLI
-RUN curl -sS https://get.symfony.com/cli/installer | bash \
-    && mv /root/.symfony5/bin/symfony /usr/local/bin/symfony \
-    && chmod +x /usr/local/bin/symfony
-
 # Set working directory
 WORKDIR /srv/app
-
-# Copy the application code
-COPY ./app/ .
-
-# Expose the Symfony server port
-EXPOSE 8000
-
-# Environment for development
-ENV APP_ENV=dev \
-    APP_DEBUG=1
-
-# Healthcheck to ensure the server is responding
-HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8000/ || exit 1
-
-# Start the Symfony local web server in the foreground and bind to all interfaces
-# Use --host if available; if that fails, fall back to PHP builtin server so it always listens on 0.0.0.0
-CMD ["sh", "-lc", "symfony server:start --no-tls --allow-http --port=8000 --host=0.0.0.0 || php -S 0.0.0.0:8000 -t public"]
