--- a/backend/app/composer.json
+++ b/backend/app/composer.json
@@ -69,6 +69,7 @@
     "require-dev": {
         "php-cs-fixer/shim": "^3.92",
         "symfony/debug-bundle": "7.4.*",
+        "symfony/maker-bundle": "^1.65",
         "symfony/stopwatch": "7.4.*",
         "symfony/web-profiler-bundle": "7.4.*"
     }
