--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -1,19 +1,32 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name app.localhost;
 
     root /srv/app/public;
     index index.php;
+
+    client_max_body_size 10M;
+
+    add_header X-Frame-Options "DENY" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer" always;
+
+    server_tokens off;
 
     location / {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ \.php$ {
+    location ~ ^/index\.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $document_root;
+        fastcgi_hide_header X-Powered-By;
+    }
+
+    location ~ \.php$ {
+        deny all;
     }
 
     location ~ /\. {
