--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /backend/app/.php-cs-fixer.dist.php
 /backend/app/.php-cs-fixer.cache
 ###< backend-cs-fixer/shim ###
+
+/backend/php/errors/php-error.log
