--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -14,6 +14,9 @@ server {
 
     server_tokens off;
 
+    error_log  /srv/logs/nginx/error.log;
+    access_log /srv/logs/nginx/access.log;
+
     location / {
         try_files $uri /index.php$is_args$args;
     }
