--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 ###< backend-cs-fixer/shim ###
 
 /backend/php/errors/php-error.log
+
+/backend/nginx/logs/access.log
+/backend/nginx/logs/error.log
