--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -15,7 +15,7 @@ server {
     server_tokens off;
 
     error_log  /srv/logs/nginx/error.log;
-    access_log /srv/logs/nginx/access.log;
+    access_log /srv/logs/nginx/access.log main buffer=32k flush=5s;
 
     location / {
         try_files $uri /index.php$is_args$args;
