--- a/backend/app/composer.json
+++ b/backend/app/composer.json
@@ -7,10 +7,15 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nyholm/psr7": "^1.8",
+        "open-telemetry/api": "^1.7",
+        "open-telemetry/exporter-otlp": "^1.3",
+        "open-telemetry/sdk": "^1.10",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.4.*",
+        "symfony/http-client": "^7.4",
         "symfony/monolog-bundle": "^3.0|^4.0",
         "symfony/runtime": "7.4.*",
         "symfony/serializer": "^7.4",
@@ -20,7 +25,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "tbachert/spi": false
         },
         "bump-after-update": true,
         "sort-packages": true
