--- a/backend/php/php.ini
+++ b/backend/php/php.ini
@@ -9,7 +9,7 @@ expose_php = Off
 
 ; Disable dangerous functions
 enable_dl = Off
-disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source
+disable_functions = exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source
 
 ; Disable remote file access
 allow_url_fopen = Off
@@ -54,10 +54,11 @@ unserialize_callback_func =
 ; OPcache (Performance + Security)
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-opcache.enable = 1
-opcache.enable_cli = 0
-opcache.memory_consumption = 128
-opcache.interned_strings_buffer = 16
-opcache.max_accelerated_files = 10000
-opcache.validate_timestamps = 0
-opcache.fast_shutdown = 1
+opcache.enable = 0
+;opcache.enable = 1
+;opcache.enable_cli = 0
+;opcache.memory_consumption = 128
+;opcache.interned_strings_buffer = 16
+;opcache.max_accelerated_files = 10000
+;opcache.validate_timestamps = 0
+;opcache.fast_shutdown = 1
