--- a/backend/app/config/services.yaml
+++ b/backend/app/config/services.yaml
@@ -21,3 +21,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\OpenTelemetry\OpenTelemetryService:
+        arguments:
+            $endpoint: '%env(string:OTEL_EXPORTER_OTLP_ENDPOINT)%'
+
