--- a/backend/app/composer.json
+++ b/backend/app/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.18",
+        "doctrine/doctrine-migrations-bundle": "^3.7",
+        "doctrine/orm": "^3.6",
         "nyholm/psr7": "^1.8",
         "open-telemetry/api": "^1.7",
         "open-telemetry/exporter-otlp": "^1.3",
