--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,25 @@
 version: "3.9"
 
 services:
+  db:
+    image: mysql:8.0
+    container_name: funproject-mysql
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_DATABASE: app
+      MYSQL_USER: app
+      MYSQL_PASSWORD: app
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - ./backend/db:/var/lib/postgresql/data
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
   php:
     build:
       context: .
@@ -13,8 +32,10 @@ services:
     working_dir: /srv/app
     environment:
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318/v1/traces
+      DATABASE_URL: "mysql://app:app@db:3306/app?serverVersion=8.0"
     depends_on:
       - otel-collector
+      - db
 
   otel-collector:
     image: otel/opentelemetry-collector
