--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile_php
+    container_name: funproject-php
     volumes:
       - ./backend/app:/srv/app:rw
       - ./backend/php/php.ini:/usr/local/etc/php/conf.d/99-security.ini:ro
@@ -39,7 +40,7 @@ services:
 
   otel-collector:
     image: otel/opentelemetry-collector
-    container_name: otel-collector
+    container_name: funproject-otel-collector
     command: ["--config=/etc/otelcol/config.yaml"]
     volumes:
       - ./otel-collector/otel-collector.yaml:/etc/otelcol/config.yaml
@@ -51,6 +52,7 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile_nginx
+    container_name: funproject-nginx
     ports:
       - "8000:80"
     volumes:
